add SveltJS boilerplate

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,17 @@
+<!doctype html>
 <html>
-
 <head>
-  <title>Express</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
+	<meta charset='utf8'>
+	<meta name='viewport' content='width=device-width'>
+
+	<title>Svelte app</title>
+
+	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel='stylesheet' href='/global.css'>
+	<link rel='stylesheet' href='/bundle.css'>
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+	<script src='/bundle.js'></script>
 </body>
-
 </html>
